--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="assets/clouds.png" />
+    <script src="https://kit.fontawesome.com/56ea345a36.js" crossorigin="anonymous"></script>
     <title>TheWeatherApp</title>
   </head>
   <body>
@@ -16,7 +17,7 @@
           placeholder="Enter city name"
           spellcheck="false"
         />
-        <button id="searchBtn"><img src="assets/search.png" alt="" /></button>
+        <button id="searchBtn"><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></button>
       </div>
       <div class="error">Invalid Input</div>
       <div class="weather">
