--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         </div>
       </div>
     </div>
+    <div id="str1">b5d4446e0932</div>
+    <div id="str2">ee7ecbc53e</div>
+    <div id="str3">6677f28a97</div>
     <script src="script.js"></script>
   </body>
 </html>
